# rust_api

./:  Rocket.toml  .env  Cargo.toml
benches/: my_benchmark.rs
src/: db.rs  lib.rs  logging.rs  main.rs
src/errors/: mod.rs
src/heroes/: controller.rs  mod.rs  routes.rs
tests/: test.rs
