[package]
name = "rocket_api"
version = "0.1.0"
authors = ["Jesus Torres <jtorres@messangi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.4", default-features = false } # La libreria ring causa probles con rocket puro y node, por lo que fue necesario desactivar las cookies privadas en rocket
rocket_codegen = "0.4.4"
serde = "1.0.106"
serde_json = "1.0.51"
serde_derive = "1.0.106"
mongodb = "0.9.2"
dotenv = "0.15.0"

ring = "0.16.12"

# Benches
criterion = "0.3.1"
bson = "0.14.1"
custom_error = "1.7.1"
log = "0.4.8"
chrono = "0.4.11"
env_logger = "0.7.1"
lazy_static = "1.4.0"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
version = "0.4.4"

[[bench]]
name = "my_benchmark"
harness = false
